apps/media/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: prowlarr
    namespace: media
spec:
    replicas: 1
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app: prowlarr
    template:
        metadata:
            labels:
                app: prowlarr
        spec:
            containers:
                - name: prowlarr
                  image: lscr.io/linuxserver/prowlarr:latest
                  securityContext:
                      readOnlyRootFilesystem: true
                  ports:
                      - containerPort: 9000
                        name: http
                  volumeMounts:
                      - name: run
                        mountPath: /run
                      - name: config
                        mountPath: /config
                      - name: data
                        mountPath: /data
            securityContext:
                runAsUser: 911
                runAsGroup: 911
                fsGroup: 911
            volumes:
                - name: run
                  emptyDir:
                      medium: Memory
                - name: config
                  persistentVolumeClaim:
                      claimName: prowlarr-config
                - name: template
                  configMap:
                      name: prowlarr-config-template
                - name: data
                  persistentVolumeClaim:
                      claimName: media-volume
