apps/media/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: prowlarr
    namespace: media
spec:
    selector:
        app: prowlarr
    ports:
        - port: 80
          targetPort: 9000
          protocol: TCP
          name: http
    type: ClusterIP
