apps/media/prowlarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-httproute
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: iserlohn.thisratis.gay
spec:
  parentRefs:
    - name: gateway
      namespace: istio-ingress
      sectionName: wildcard-https
  hostnames:
    - prowlarr.thisratis.gay
  rules:
    - backendRefs:
        - name: prowlarr
          port: 80
