apps/media/prowlarr/authentik-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: prowlarr-authentik-policy
  namespace: istio-ingress
spec:
  targetRefs:
    - name: gateway
      kind: Gateway
      group: gateway.networking.k8s.io
  action: CUSTOM
  provider:
    name: authentik
  rules:
    - to:
        - operation:
            hosts:
              - "prowlarr.thisratis.gay"
